<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ActivityRegistroEmpresa">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/NombreEm"
                android:textColor="#000000"
                android:textSize="12dp"
                android:textStyle="bold"
                android:typeface="sans" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoNombreEm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:gravity="center"
                android:textSize="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/CalleEm"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"
                android:typeface="sans" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoCalleEm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:gravity="center"
                android:textSize="12dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"

                android:text="@string/NumCalleEm"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"
                android:typeface="sans" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoNumCalleEm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textSize="12dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"

                android:text="@string/CiudadEm"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"
                android:typeface="sans" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CiudadEm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:gravity="center"
                android:textSize="12dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"

                android:text="@string/CpPV"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"
                android:typeface="sans" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cpEm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textSize="12dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"

                android:text="@string/provinciaEm"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"
                android:typeface="sans" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/provinciaEm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:gravity="center"
                android:textSize="12dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center"

                android:text="@string/telefonoEm"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"
                android:typeface="sans" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/telefonoEm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textSize="12dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emailEm"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"
                android:typeface="sans" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:gravity="center"
                android:textSize="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:text="@string/passEm"
                android:textColor="#000000"
                android:textSize="17dp"
                android:textStyle="bold"
                android:typeface="sans" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passEm"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:gravity="center"
                android:inputType="textPassword"
                android:textSize="12dp" />
        </TableRow>
    </TableLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp">
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickGuardarEm"
            android:text="Button" />
    </androidx.cardview.widget.CardView>




</LinearLayout>